[gd_scene load_steps=9 format=3 uid="uid://cag8bhrjo874i"]

[ext_resource type="Script" path="res://Scenes/Enemies/spike_ball.gd" id="1_hmlic"]
[ext_resource type="Texture2D" uid="uid://i7b7lbemjkpg" path="res://Pixel Adventure 1/Free/Traps/Spiked Ball/Spiked Ball.png" id="2_2atfc"]
[ext_resource type="PackedScene" uid="uid://bn6feij3m52ki" path="res://Scenes/Enemies/One_chain.tscn" id="2_j73dm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7urhh"]
radius = 13.0096

[sub_resource type="CircleShape2D" id="CircleShape2D_0q46e"]
radius = 13.0096

[sub_resource type="Animation" id="Animation_myibd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_kyf2s"]
resource_name = "regular_move"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2beyy"]
_data = {
"RESET": SubResource("Animation_myibd"),
"regular_move": SubResource("Animation_kyf2s")
}

[node name="SpikeBall" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_hmlic")

[node name="OneChain" parent="." instance=ExtResource("2_j73dm")]

[node name="SpikeBall" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, 15)
texture = ExtResource("2_2atfc")

[node name="Area_collision_with_map" type="Area2D" parent="SpikeBall"]
position = Vector2(0, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeBall/Area_collision_with_map"]
position = Vector2(2.79753e-06, 16)
shape = SubResource("CircleShape2D_7urhh")

[node name="damage_zone" type="Area2D" parent="SpikeBall"]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeBall/damage_zone"]
position = Vector2(2.79753e-06, 1)
shape = SubResource("CircleShape2D_0q46e")

[node name="raycast_floor_detection" type="RayCast2D" parent="."]
target_position = Vector2(0, 30)

[node name="safeTime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="animation_rotation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2beyy")
}

[connection signal="body_entered" from="SpikeBall/Area_collision_with_map" to="." method="_on_area_collision_with_map_body_entered"]
[connection signal="timeout" from="safeTime" to="." method="_on_safe_time_timeout"]
